js262/test/language/block-scope/syntax/redeclaration/let-name-redeclaration-attempt-with-generator.js


/*---
description: redeclaration with GeneratorDeclaration (LexicalDeclaration (let) in BlockStatement)
esid: sec-block-static-semantics-early-errors
features: [generators]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Block : { StatementList }

    It is a Syntax Error if the LexicallyDeclaredNames of StatementList contains
    any duplicate entries.

---*/


$DONOTEVALUATE();

{ let f; function* f() {} }
